--- a/Microservices/LocationEventService/LocationEventService.Api/appsettings.json
+++ b/Microservices/LocationEventService/LocationEventService.Api/appsettings.json
@@ -8,6 +8,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "LocationEventServiceContext": "Server=(localdb)\\mssqllocaldb;Database=LocationEventServiceContext-c23f081c-f41a-4a6b-8cfe-ada4ac9e4a7e;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "LocationEventServiceContext": "Server=(localdb)\\mssqllocaldb;Database=LocationEventServiceContext-c23f081c-f41a-4a6b-8cfe-ada4ac9e4a7e;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "LocationEventServiceMongo": "mongodb+srv://tonur:ole12345@uclcluster-lvtjy.azure.mongodb.net/test?authSource=admin&replicaSet=UCLCluster-shard-0&readPreference=primary&appname=MongoDB%20Compass&ssl=true"
+
   }
 }
