--- a/Microservices/LocationQueryService/LocationQueryService.Api/appsettings.json
+++ b/Microservices/LocationQueryService/LocationQueryService.Api/appsettings.json
@@ -8,6 +8,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "LocationQueryServiceContext": "Server=(localdb)\\mssqllocaldb;Database=LocationQueryServiceContext-16e578ac-c0d8-460f-9abf-043bad9b91c6;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "LocationQueryServiceContext": "Server=(localdb)\\mssqllocaldb;Database=LocationQueryServiceContext-16e578ac-c0d8-460f-9abf-043bad9b91c6;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "LocationQueryServiceMongo": "mongodb+srv://tonur:ole12345@uclcluster-lvtjy.azure.mongodb.net/test?authSource=admin&replicaSet=UCLCluster-shard-0&readPreference=primary&appname=MongoDB%20Compass&ssl=true"
+
   }
 }
