--- a/Microservices/MasterDataService/MasterDataService.Api/appsettings.json
+++ b/Microservices/MasterDataService/MasterDataService.Api/appsettings.json
@@ -8,6 +8,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MasterdataServiceContext": "Server=(localdb)\\mssqllocaldb;Database=MasterdataServiceContext-a85ce79f-a87b-458c-bab1-02faed4cbb94;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "MasterDataServiceContext": "Server=(localdb)\\mssqllocaldb;Database=MasterdataServiceContext-a85ce79f-a87b-458c-bab1-02faed4cbb94;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "MasterDataServiceMongo": "mongodb+srv://tonur:ole12345@uclcluster-lvtjy.azure.mongodb.net/test?authSource=admin&replicaSet=UCLCluster-shard-0&readPreference=primary&appname=MongoDB%20Compass&ssl=true"
+
   }
 }
