--- a/Gateway/Gateway.WebBff/Gateway.WebBff.csproj
+++ b/Gateway/Gateway.WebBff/Gateway.WebBff.csproj
@@ -4,4 +4,9 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MMLib.SwaggerForOcelot" Version="2.0.0-alpha.2" />
+    <PackageReference Include="Ocelot" Version="15.0.6" />
+  </ItemGroup>
+
 </Project>
