--- a/Microservices/LocationEventService/LocationEventService.Api/Properties/launchSettings.json
+++ b/Microservices/LocationEventService/LocationEventService.Api/Properties/launchSettings.json
@@ -1,19 +1,26 @@
-﻿{
+{
   "iisSettings": {
-    "windowsAuthentication": false, 
-    "anonymousAuthentication": true, 
+    "windowsAuthentication": false,
+    "anonymousAuthentication": true,
     "iisExpress": {
       "applicationUrl": "http://localhost:57934",
       "sslPort": 44356
     }
   },
-    "LocationEventService.Api": {
-      "commandName": "Project",
-      "launchBrowser": true,
-      "applicationUrl": "https://localhost:5003;http://localhost:5002",
+  "profiles": {
+    "IIS Express": {
+      "commandName": "IISExpress",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
+    },
+    "LocationEventService": {
+      "commandName": "Project",
+      "launchUrl": "swagger",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      },
+      "applicationUrl": "https://localhost:5003;http://localhost:5002"
     }
   }
 }
