--- a/Microservices/LocationQueryService/LocationQueryService.Domain/LocationQueryService.Domain.csproj
+++ b/Microservices/LocationQueryService/LocationQueryService.Domain/LocationQueryService.Domain.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\Core\RabbitMQ.Bus\RabbitMQ.Bus.csproj" />
     <ProjectReference Include="..\..\..\Core\Shared\Shared.csproj" />
   </ItemGroup>
 
