--- a/Microservices/MasterDataService/MasterDataService.Data/MasterDataService.Data.csproj
+++ b/Microservices/MasterDataService/MasterDataService.Data/MasterDataService.Data.csproj
@@ -5,10 +5,14 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.0-preview.2.20159.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="3.1.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="1.1.0" />
+    <PackageReference Include="MongoDB.Driver" Version="2.10.3" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\Core\Shared\Shared.csproj" />
     <ProjectReference Include="..\MasterDataService.Domain\MasterDataService.Domain.csproj" />
   </ItemGroup>
 
